# CoreWeb

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  devplan.md  main_temp.cpp  progress_phase0.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_submission.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt  README.md
core/: CMakeLists.txt  README.md
docs/: CONTRIBUTING.md  SETUP.md  TECHNOLOGIES.md
libs/: CMakeLists.txt
libs/coreweb-common-types/: CMakeLists.txt  README.md
libs/coreweb-common-types/include/coreweb-common-types/: config_type.h  plugin_type.h  project_type.h  serialization.h
libs/coreweb-common-types/src/: config_type.cpp  plugin_type.cpp  project_type.cpp  serialization.cpp
